@@ -41,4 +41,7 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
+    jvmArgs(
+        '-XX:+EnableDynamicAgentLoading'
+    )
 }
